configMap-and-secrets/workload.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: wp-deploy
  labels:
    env: wp-pod
spec:
  selector:
    matchLabels:
      env: wp-pod1
  replicas: 1
  template:
    metadata:
      labels:
        env: wp-pod1
    spec:
      containers:
        - name: wp-cont
          image: wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  labels:
    env: db-cont
spec:
  selector:
    matchLabels:
      test: db-test
  replicas: 1
  template:
    metadata:
      labels:
        test: db-test
    spec:
      containers:
        - name: db-pod
          image: mysql
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deploy
  labels:
    app: adminer
spec:
  selector:
    matchLabels:
      app: adminer-cont
  replicas: 1
  template:
    metadata:
      labels:
        app: adminer-cont
    spec:
      containers:
        - name: adminer-container
          image: adminer
